--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "connector/src/main/resources/mappings"]
-	path = connector/src/main/resources/mappings
+[submodule "connector/src/main/resources/education/mappings"]
+	path = connector/src/main/resources/education/mappings
+	url = https://github.com/bundabrg/mappings-education.git
+[submodule "connector/src/main/resources/bedrock/mappings"]
+	path = connector/src/main/resources/bedrock/mappings
 	url = https://github.com/GeyserMC/mappings.git
