--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -30,10 +30,24 @@
             <version>2.9.8</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Current Bedrock Protocol -->
         <dependency>
             <groupId>com.nukkitx.protocol</groupId>
             <artifactId>bedrock-v390</artifactId>
-            <version>2.5.6-SNAPSHOT</version>
+            <version>2.5.7-SNAPSHOT</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.sf.trove4j</groupId>
+                    <artifactId>trove</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- Current MCEE Protocol -->
+        <dependency>
+            <groupId>com.nukkitx.protocol</groupId>
+            <artifactId>bedrock-v363</artifactId>
+            <version>2.5.7-SNAPSHOT</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
