Implement support for Minecraft Education Edition
Changes:
* Temporarily Disable Github Action as this will not build till https://github.com/NukkitX/Protocol/pull/39 is merged
* Add gamerule "codebuilder":"false" to disable MCEE code builder.
* Update config.yml so that an edition is specified (bedrock or education)
* Move away from automagic annotations to a dependency injection system. This allows versions to use the existing classes or redefine them.
* Implement shims to allow the base codebase to have fewer changes. Any changes to the main codebase will flow into education unless it breaks and requires patching through a shim.
* Move mappings and data resources to be namespaced by the edition (resources/edition)
* Add SkinUtils shim to use legacy geometery data
* Add LoginEncryptUtils shim to add a signedToken for education support. This is managed through a new TokenManager
* Add BlockTranslator shim to handle block mappings with meta values
* Fix respawning in Education as its Packets seem to be slightly different
* Implement a Token Manager to handle OAuth2 tokens with both Microsoft and Minecraft servers. These are saved and updated in `tokens.yml`

--- a/connector/src/main/resources/config.yml
+++ b/connector/src/main/resources/config.yml
@@ -15,6 +15,10 @@ bedrock:
   # The MOTD that will be broadcasted to Minecraft: Bedrock Edition clients. Irrelevant if "passthrough-motd" is set to true
   motd1: "GeyserMC"
   motd2: "Another GeyserMC forced host."
+
+  # Edition - bedrock or education
+  edition: bedrock
+
 remote:
   # The IP address of the remote (Java Edition) server
   address: 127.0.0.1
